# ChangeLog for kde-base/arts
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/arts/ChangeLog,v 1.214 2006/05/30 03:15:43 josejx Exp $

  30 May 2006; Joseph Jezak <josejx@gentoo.org> arts-3.5.2.ebuild:
  Marked ppc stable for bug #132213.

  29 May 2006; Jason Wever <weeve@gentoo.org> arts-3.5.2.ebuild:
  Stable on SPARC wrt bug #132213.

  29 May 2006; Diego Pettenò <flameeyes@gentoo.org> -arts-3.4.1-r2.ebuild,
  -arts-3.4.2.ebuild:
  Drop old versions.

  26 May 2006; Markus Rothe <corsair@gentoo.org> arts-3.5.2.ebuild:
  Stable on ppc64

  26 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> arts-3.5.2.ebuild:
  Stable on amd64 wrt bug #132213

  25 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> arts-3.5.2.ebuild:
  Stable on x86 wrt bug #132213

  10 May 2006; Caleb Tennis <caleb@gentoo.org> arts-3.4.3.ebuild,
  arts-3.5.2.ebuild:
  Arts test fails, so just don't run them

  06 May 2006; Diego Pettenò <flameeyes@gentoo.org> arts-3.5.2.ebuild:
  Add ~x86-fbsd keyword.

  05 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> -arts-3.5.0.ebuild,
  -arts-3.5.0-r1.ebuild, -arts-3.5.1.ebuild:
  Removed old 3.5.0/3.5.1 packages.

  23 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> arts-3.5.2.ebuild:
  Fix MY_PV to 1.5.2 instead of 1.5.1.

*arts-3.5.2 (22 Mar 2006)

  22 Mar 2006; Dan Armak <danarmak@gentoo.org> +arts-3.5.2.ebuild:
  KDE 3.5.2. Not yet released upstream, and so package.masked for now.

  07 Feb 2006; Aron Griffis <agriffis@gentoo.org> arts-3.4.3.ebuild:
  Mark 3.4.3 stable on ia64

  01 Feb 2006; Carsten Lohrke <carlo@gentoo.org> arts-3.5.1.ebuild:
  Correct SRC_URI.

*arts-3.5.1 (23 Jan 2006)

  23 Jan 2006; Dan Armak <danarmak@gentoo.org> +arts-3.5.1.ebuild:
  Version 3.5.1. Not yet released upstream, so package.masked for now.

*arts-3.5.1 (22 Jan 2006)

  22 Jan 2006; Dan Armak <danarmak@gentoo.org> +arts-3.5.1.ebuild: