@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 1.3.0-jack-configure.in.in.patch 694 RMD160 58c5019f605ea2bd075f2d287f9d780c11850289 SHA1 3df80e05b61c93ce8c49cb60ac3c6d783d09f350 SHA256 0789776e877337c552b05b9666abd1183eb2d4272a6aa16488d3eb91cbec5a48
 MD5 68ec6c8e74dfea13c3bb54575b1c51d4 files/1.3.0-jack-configure.in.in.patch 694
 RMD160 58c5019f605ea2bd075f2d287f9d780c11850289 files/1.3.0-jack-configure.in.in.patch 694
@@ -49,10 +52,14 @@ EBUILD arts-3.5.2.ebuild 3173 RMD160 5d3238bf60bd6d9a81a2607e6bb53e0186e59a22 SH
 MD5 9180c2d9b2eefece35a7856912cef3e5 arts-3.5.2.ebuild 3173
 RMD160 5d3238bf60bd6d9a81a2607e6bb53e0186e59a22 arts-3.5.2.ebuild 3173
 SHA256 902917bcefffcd0c1a892ee2aeaaf4c5f52c01b531e63d5f61945492c93abac6 arts-3.5.2.ebuild 3173
-MISC ChangeLog 27566 RMD160 97e12cd95afccf0c9ce3d723a91f40589a1890c1 SHA1 6f3de6d0bff7592e3474caca36a6a752ee658219 SHA256 be4920fcd77f77ff57a4bbe747d1f2f5be0cadf86527fc50364d4a64f85440ae
-MD5 c867760c79e5d33b5f5622a87a1cdd36 ChangeLog 27566
-RMD160 97e12cd95afccf0c9ce3d723a91f40589a1890c1 ChangeLog 27566
-SHA256 be4920fcd77f77ff57a4bbe747d1f2f5be0cadf86527fc50364d4a64f85440ae ChangeLog 27566
+EBUILD arts-3.5.3.ebuild 3181 RMD160 d6a7a559e181e58aea538c0c6593e4dfd3ec2fee SHA1 edc07c5f7d171f9fd73bfda12f1059144b3148e0 SHA256 de665221f937470d7319a48eb0257fcb628e0f5814c9af94762e247b7def19fe
+MD5 d39878696efd78adf0bc59e32bf71cca arts-3.5.3.ebuild 3181
+RMD160 d6a7a559e181e58aea538c0c6593e4dfd3ec2fee arts-3.5.3.ebuild 3181
+SHA256 de665221f937470d7319a48eb0257fcb628e0f5814c9af94762e247b7def19fe arts-3.5.3.ebuild 3181
+MISC ChangeLog 27739 RMD160 b145fa90c73fbff94b66b8f78433295b78c9761c SHA1 2934826efe6869fa65a93bbab12a798a391d6ecd SHA256 e4e53979755a8e8989d8bdb6c076bd3f18ea7a9ed1e32854c71688034990f13f
+MD5 42e4ccad597d10553969fefbad55e36c ChangeLog 27739
+RMD160 b145fa90c73fbff94b66b8f78433295b78c9761c ChangeLog 27739
+SHA256 e4e53979755a8e8989d8bdb6c076bd3f18ea7a9ed1e32854c71688034990f13f ChangeLog 27739
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
@@ -69,3 +76,13 @@ SHA256 176016a3023561a716fcfea4923bef3a296bca56b89af28c5c06e8486fcd36f7 files/di
 MD5 967dfcc7b73af3bce805b20f6d0abb8f files/digest-arts-3.5.2 235
 RMD160 520b57ce525f379144ef94ca3f0f54dda6e52346 files/digest-arts-3.5.2 235
 SHA256 590bf852397f55d011fa344f8e1436487356a16f3d944af9b2e1c142477b5b1b files/digest-arts-3.5.2 235
+MD5 967dfcc7b73af3bce805b20f6d0abb8f files/digest-arts-3.5.3 235
+RMD160 520b57ce525f379144ef94ca3f0f54dda6e52346 files/digest-arts-3.5.3 235
+SHA256 590bf852397f55d011fa344f8e1436487356a16f3d944af9b2e1c142477b5b1b files/digest-arts-3.5.3 235
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.3 (GNU/Linux)
+
+iD8DBQFEfjbQAiZjviIA2XgRAkt7AKDxCji1GBGCf5+HwKgBVq76tvdCqACeLKFz
+oZZ+cd+hSVev651GmPn7E4Y=
+=tvqV
+-----END PGP SIGNATURE-----
