@@ -1,0 +1,3 @@
+MD5 e1eb7969ea16aab2bdd9d1a9736d6af3 arts-1.5.2.tar.bz2 967088
+RMD160 cf4fcdffdaada6b79ef1ec7139b1f60ff125ced2 arts-1.5.2.tar.bz2 967088
+SHA256 f2b8fe00d5273fe20ced3cc8cae83f28036655f2d8f65f88583c97b3b17938f2 arts-1.5.2.tar.bz2 967088
