@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/arts
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/arts/ChangeLog,v 1.214 2006/05/30 03:15:43 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/arts/ChangeLog,v 1.215 2006/06/01 00:37:29 flameeyes Exp $
+
+*arts-3.5.3 (01 Jun 2006)
+
+  01 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> +arts-3.5.3.ebuild:
+  Add aRTs 3.5.3 (to avoid block development of monolithic ebuilds).
 
   30 May 2006; Joseph Jezak <josejx@gentoo.org> arts-3.5.2.ebuild:
   Marked ppc stable for bug #132213.
